# CALVIN_HOOK

./: README.md  calvin.py  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/io/hook/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/hook_sdk/include/: hook_sdk.h
app/src/main/cpp/hook_sdk/src/: arm64_constants.h  assembler.cpp  assembler.h  code_patch.cpp  code_patch.h  elf_symbol_resolver.cpp  elf_symbol_resolver.h  hook_api.cpp  hook_entry.h  hook_registry.cpp  hook_registry.h  logging.h  memory_allocator.cpp  memory_allocator.h  relocator.cpp  relocator.h  trampoline.cpp  trampoline.h
app/src/main/cpp/hook_sdk/src/xz/: xz_config.h  xz_dec.c  xz_dec.h
app/src/main/cpp/js_engine/: CMakeLists.txt
app/src/main/cpp/js_engine/include/: js_engine.h
app/src/main/cpp/js_engine/src/: js_engine.cpp  js_interceptor.cpp  js_interceptor.h  js_java_bridge.cpp  js_java_bridge.h  js_memory.cpp  js_memory.h  js_module.cpp  js_module.h  js_native.cpp  js_native.h  js_ptr.cpp  js_ptr.h  js_runtime.js  js_scope.h  js_socket_server.cpp  js_socket_server.h
app/src/main/cpp/lsplant/: CMakeLists.txt  common.cxx  logging.hpp  lsplant.cc
app/src/main/cpp/lsplant/art/mirror/: class.cxx
app/src/main/cpp/lsplant/art/runtime/: art_method.cxx  class_linker.cxx  dex_file.cxx  handle.cxx  instrumentation.cxx  runtime.cxx  thread.cxx  thread_list.cxx
app/src/main/cpp/lsplant/art/runtime/gc/: scoped_gc_critical_section.cxx
app/src/main/cpp/lsplant/art/runtime/jit/: jit.cxx  jit_code_cache.cxx
app/src/main/cpp/lsplant/art/runtime/jni/: jni_id_manager.cxx
app/src/main/cpp/quickjs/: CMakeLists.txt  quickjs.h
app/src/main/cpp/资料/: FridaInlineHook实现分析.md  LSPlant剖析.md  debugdata.elf  debugdata.xz
app/src/main/java/com/io/hook/: HookBridge.java  JavaHookManager.java  MainActivity.java  MethodHook.java  MethodReplacement.java  ScriptEngine.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/io/hook/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
